apps/api/dev/cilium-envoy.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  name: api-l7-proxy
  labels:
    cilium.io/use-original-source-address: "false"
spec:
  services:
    - name: api
      namespace: dev
  backendServices:
    - name: api
      namespace: dev
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      name: api-l7-proxy
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: api-l7-proxy
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "dev/api"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
